@@ -87,7 +87,6 @@
             ),
             'zenmagick.core.database.provider' => 'ZMZenCartDatabase',
             'zenmagick.core.database.mappings.file' => 'config/db_mappings.txt',
-            'zenmagick.core.database.tablePrefix' => ZM_DB_PREFIX,
             'zenmagick.core.database.mappings.cache.enabled' => false,
             'zenmagick.core.database.mappings.autoMap.enabled' => true,
 
